# odoo-connect

./: .flake8  .gitignore  README.md  pre-commit  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: python-lint-test.yml  python-publish.yml
odoo_connect/: __init__.py  attachment.py  data.py  explore.py  export_import.py  format.py  odoo_rpc.py  odoo_rpc_base.py  odoo_rpc_json.py  odoo_rpc_xml.py
tests/: conftest.py  mock_odoo_server.py  test_connect.py  test_data.py  test_explore.py  test_format.py  test_on_runbot.py
tests/runbot/: conftest.py  test_base_runbot.py  test_export_attachment.py  test_export_data.py  test_export_report.py  test_import_data.py  test_read_dict.py
