[build-system]
requires = [
    "setuptools>=61",
    "setuptools-scm>=6",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "odoo-connect"
dynamic = ["version"]
description = "Simple RPC client for Odoo"
readme = "README.md"
keywords = ["odoo", "rpc"]
license = {text = "GNU Lesser General Public License v3 (LGPLv3)"}
requires-python = ">=3.7"
classifiers = [
    # https://pypi.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
    "Framework :: Odoo",
]
dependencies = [
    "requests",
]

[project.urls]
Homepage = "https://github.com/kmagusiak/odoo-connect"

[[project.authors]]
name = "Krzysztof Magusiak"
email = "chrmag@poczta.onet.pl"

[tool.black]
line-length = 100
skip-string-normalization = 1

[tool.mypy]
ignore_missing_imports = true

[tool.isort]
profile = "black"
line_length = 100

[tools.setuptools]
packages = ["odoo_connect"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
